Large commit for typechecker support for generics.  Partially working.